--- a/User umum/index.html
+++ b/User umum/index.html
@@ -76,7 +76,7 @@
           <li class="dropdown">
             <a href="#fasilitas" class="underline"><span>Fasilitas</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#failitas" class="underline">Laboratorium & Kelas</a></li>
+              <li><a href="#fasilitas" class="underline">Laboratorium & Kelas</a></li>
               <li><a href="#fasilitas" class="underline">Akomodasi</a></li>
               <li><a href="#fasilitas" class="underline">Kantin</a></li>
               <li><a href="#fasilitas" class="underline">Perpustakaan</a></li>
@@ -619,146 +619,149 @@
 </section><!-- End Lembaga Section -->
 <div class="section-separator"></div>
 
-<!-- ======= Fasilitas Section ======= -->
-<section id="fasilitas" class="fasilitas section-bg">
-  <div class="container">
+<!DOCTYPE html>
+<html lang="en">
 
-    <div class="section-title" data-aos="fade-up">
-      <h2>Fasilitas</h2>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Fasilitas Section</title>
+</head>
+
+<body>
+
+  <!-- ======= Fasilitas Section ======= -->
+  <section id="fasilitas" class="fasilitas section-bg">
+    <div class="container">
+
+      <div class="section-title" data-aos="fade-up">
+        <h2>Fasilitas</h2>
+      </div>
+
+      <div class="row fasilitas-container" data-aos="fade-up">
+
+        <!-- Lab & Kelas -->
+        <div class="col-lg-4 col-md-6 fasilitas-item">
+          <div class="fasilitas-wrap">
+            <!-- Gambar Lab & Kelas -->
+            <a href="assets/img/fasilitas/Lab.jpg" data-lightbox="fasilitas" data-title="Laboratorium Komputer Institut Teknologi Del">
+              <img src="assets/img/fasilitas/Lab.jpg" class="img-fluid" alt="">
+              <div class="overlay">
+                <div class="fasilitas-info">
+                  <h4>Laboratorium Komputer</h4>
+                  <a href="fasilitas-details.html" class="btn btn-primary">View Details</a>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <!-- Akomodasi -->
+        <div class="col-lg-4 col-md-6 fasilitas-item">
+          <div class="fasilitas-wrap">
+            <!-- Gambar Akomodasi -->
+            <a href="assets/img/fasilitas/akomodasi.jpg" data-lightbox="fasilitas" data-title="Akomodasi Institut Teknologi Del">
+              <img src="assets/img/fasilitas/akomodasi.jpg" class="img-fluid" alt="">
+              <div class="overlay">
+                <div class="fasilitas-info">
+                  <h4>Akomodasi</h4>
+                  <a href="fasilitas-details.html" class="btn btn-primary">View Details</a>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <!-- Kantin -->
+        <div class="col-lg-4 col-md-6 fasilitas-item">
+          <div class="fasilitas-wrap">
+            <!-- Gambar Kantin -->
+            <a href="assets/img/fasilitas/kantin.jpg" data-lightbox="fasilitas" data-title="Kantin Institut Teknologi Del">
+              <img src="assets/img/fasilitas/kantin.jpg" class="img-fluid" alt="">
+              <div class="overlay">
+                <div class="fasilitas-info">
+                  <h4>Kantin</h4>
+                  <a href="fasilitas-details.html" class="btn btn-primary">View Details</a>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <!-- Perpustakaan -->
+        <div class="col-lg-4 col-md-6 fasilitas-item">
+          <div class="fasilitas-wrap">
+            <!-- Gambar Perpustakaan -->
+            <a href="assets/img/fasilitas/perpustakaan.jpg" data-lightbox="fasilitas" data-title="Perpustakaan Institut Teknologi Del">
+              <img src="assets/img/fasilitas/perpustakaan.jpg" class="img-fluid" alt="">
+              <div class="overlay">
+                <div class="fasilitas-info">
+                  <h4>Perpustakaan</h4>
+                  <a href="fasilitas-details.html" class="btn btn-primary">View Details</a>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <!-- Hiburan & Olahraga -->
+        <div class="col-lg-4 col-md-6 fasilitas-item">
+          <div class="fasilitas-wrap">
+            <!-- Gambar Hiburan & Olahraga -->
+            <a href="assets/img/fasilitas/hiburan.jpg" data-lightbox="fasilitas" data-title="Hiburan & Olahraga Institut Teknologi Del">
+              <img src="assets/img/fasilitas/hiburan.jpg" class="img-fluid" alt="">
+              <div class="overlay">
+                <div class="fasilitas-info">
+                  <h4>Hiburan & Olahraga</h4>
+                  <a href="fasilitas-details.html" class="btn btn-primary">View Details</a>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <!-- Ruang Terbuka -->
+        <div class="col-lg-4 col-md-6 fasilitas-item">
+          <div class="fasilitas-wrap">
+            <!-- Gambar Ruang Terbuka -->
+            <a href="assets/img/fasilitas/ruang_terbuka.jpg" data-lightbox="fasilitas" data-title="Ruang Terbuka Institut Teknologi Del">
+              <img src="assets/img/fasilitas/ruang_terbuka.jpg" class="img-fluid" alt="">
+              <div class="overlay">
+                <div class="fasilitas-info">
+                  <h4>Ruang Terbuka</h4>
+                  <a href="fasilitas-details.html" class="btn btn-primary">View Details</a>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <!-- Klinik -->
+        <div class="col-lg-4 col-md-6 fasilitas-item">
+          <div class="fasilitas-wrap">
+            <!-- Gambar Klinik -->
+            <a href="assets/img/fasilitas/klinik.jpg" data-lightbox="fasilitas" data-title="Klinik Institut Teknologi Del">
+              <img src="assets/img/fasilitas/klinik.jpg" class="img-fluid" alt="">
+              <div class="overlay">
+                <div class="fasilitas-info">
+                  <h4>Klinik</h4>
+                  <a href="fasilitas-details.html" class="btn btn-primary">View Details</a>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
+      </div>
     </div>
+  </section><!-- End Fasilitas Section -->
 
-    <div class="row" data-aos="fade-up">
-      <div class="col-lg-12 d-flex justify-content-center">
-        <ul id="fasilitas-flters">
-          <li data-filter="*" class="filter-active">Semua</li>
-          <li data-filter=".filter-app">Lab & Kelas</li>
-          <li data-filter=".filter-web">Akomodasi</li>
-          <li data-filter=".filter-card">Kantin</li>
-          <li data-filter=".filter-web">Perpustakaan</li>
-          <li data-filter=".filter-web">Hiburan & Olahraga</li>
-          <li data-filter=".filter-web">Ruang Terbuka</li>
-          <li data-filter=".filter-web">Klinik</li>
-        </ul>
-      </div>
-    </div>
+  <script src="lightbox.js"></script>
+</body>
 
-    <div class="row fasilitas-container" data-aos="fade-up">
+</html>
 
-      <!-- Lab & Kelas -->
-      <div class="col-lg-4 col-md-6 fasilitas-item filter-app">
-        <div class="fasilitas-wrap">
-          <!-- Gambar Lab & Kelas -->
-          <img src="assets/img/fasilitas/Lab.jpg" class="img-fluid" alt="">
-          <div class="fasilitas-info">
-            <h4>Laboratorium Komputer</h4>
-            <div class="fasilitas-links">
-              <!-- Lightbox dan More Details -->
-              <a href="assets/img/fasilitas/Lab.jpg" data-gallery="fasilitasGallery" class="fasilitas-lightbox" title="Laboratorium Komputer Institut Teknologi Del"><i class="bx bx-plus"></i></a>
-              <a href="fasilitas-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Akomodasi -->
-      <div class="col-lg-4 col-md-6 fasilitas-item filter-web">
-        <div class="fasilitas-wrap">
-          <!-- Gambar Akomodasi -->
-          <img src="assets/img/fasilitas/akomodasi.jpg" class="img-fluid" alt="">
-          <div class="fasilitas-info">
-            <h4>Akomodasi</h4>
-            <div class="fasilitas-links">
-              <!-- Lightbox dan More Details -->
-              <a href="assets/img/fasilitas/akomodasi.jpg" data-gallery="fasilitasGallery" class="fasilitas-lightbox" title="Akomodasi Institut Teknologi Del"><i class="bx bx-plus"></i></a>
-              <a href="fasilitas-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Kantin -->
-      <div class="col-lg-4 col-md-6 fasilitas-item filter-card">
-        <div class="fasilitas-wrap">
-          <!-- Gambar Kantin -->
-          <img src="assets/img/fasilitas/kantin.jpg" class="img-fluid" alt="">
-          <div class="fasilitas-info">
-            <h4>Kantin</h4>
-            <div class="fasilitas-links">
-              <!-- Lightbox dan More Details -->
-              <a href="assets/img/fasilitas/kantin.jpg" data-gallery="fasilitasGallery" class="fasilitas-lightbox" title="Kantin Institut Teknologi Del"><i class="bx bx-plus"></i></a>
-              <a href="fasilitas-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Perpustakaan -->
-      <div class="col-lg-4 col-md-6 fasilitas-item filter-card">
-        <div class="fasilitas-wrap">
-          <!-- Gambar Perpustakaan -->
-          <img src="assets/img/fasilitas/perpustakaan.jpg" class="img-fluid" alt="">
-          <div class="fasilitas-info">
-            <h4>Perpustakaan</h4>
-            <div class="fasilitas-links">
-              <!-- Lightbox dan More Details -->
-              <a href="assets/img/fasilitas/perpustakaan.jpg" data-gallery="fasilitasGallery" class="fasilitas-lightbox" title="Perpustakaan Institut Teknologi Del"><i class="bx bx-plus"></i></a>
-              <a href="fasilitas-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Hiburan & Olahraga -->
-      <div class="col-lg-4 col-md-6 fasilitas-item filter-card">
-        <div class="fasilitas-wrap">
-          <!-- Gambar Hiburan & Olahraga -->
-          <img src="assets/img/fasilitas/hiburan.jpg" class="img-fluid" alt="">
-          <div class="fasilitas-info">
-            <h4>Hiburan & Olahraga</h4>
-            <div class="fasilitas-links">
-              <!-- Lightbox dan More Details -->
-              <a href="assets/img/fasilitas/hiburan.jpg" data-gallery="fasilitasGallery" class="fasilitas-lightbox" title="Hiburan & Olahraga Institut Teknologi Del"><i class="bx bx-plus"></i></a>
-              <a href="fasilitas-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Ruang Terbuka -->
-      <div class="col-lg-4 col-md-6 fasilitas-item filter-card">
-        <div class="fasilitas-wrap">
-          <!-- Gambar Ruang Terbuka -->
-          <img src="assets/img/fasilitas/ruang_terbuka.jpg" class="img-fluid" alt="">
-          <div class="fasilitas-info">
-            <h4>Ruang Terbuka</h4>
-            <div class="fasilitas-links">
-              <!-- Lightbox dan More Details -->
-              <a href="assets/img/fasilitas/ruang_terbuka.jpg" data-gallery="fasilitasGallery" class="fasilitas-lightbox" title="Ruang Terbuka Institut Teknologi Del"><i class="bx bx-plus"></i></a>
-              <a href="fasilitas-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Klinik -->
-      <div class="col-lg-4 col-md-6 fasilitas-item filter-card">
-        <div class="fasilitas-wrap">
-          <!-- Gambar Klinik -->
-          <img src="assets/img/fasilitas/klinik.jpg" class="img-fluid" alt="">
-          <div class="fasilitas-info">
-            <h4>Klinik</h4>
-            <div class="fasilitas-links">
-              <!-- Lightbox dan More Details -->
-              <a href="assets/img/fasilitas/klinik.jpg" data-gallery="fasilitasGallery" class="fasilitas-lightbox" title="Klinik Institut Teknologi Del"><i class="bx bx-plus"></i></a>
-              <a href="fasilitas-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section><!-- End Fasilitas Section -->
 <div class="section-separator"></div>
 
     <!-- ======= Contact Section ======= -->
